# collaborative_mixer

./: .gitignore  .tool-versions  AGENTS.md  README.md  docker-compose.yml  todo.md
backend/: .gitignore  AGENTS.md  Cargo.toml  mix.exs
backend/config/: config.exs  dev.exs  test.exs
backend/lib/: backend_web.ex
backend/lib/backend/: application.ex  dsp.ex  exports.ex  projects.ex  samples.ex
backend/lib/backend_web/: endpoint.ex  router.ex
backend/native/backend_dsp/: AGENTS.md  Cargo.toml  README.md
backend/native/backend_dsp/src/: engine.rs  interface.rs  lib.rs  mixer.rs  state.rs  voice.rs  waveform.rs
backend/native/backend_dsp/src/dsp/: effects.rs  envelope.rs  fft.rs  filters.rs  lfo.rs  mod.rs  oscillators.rs
backend/native/backend_dsp/src/timeline/: chunk_mixer.rs  decoder.rs  interval_tree.rs  mmap_store.rs  mod.rs
backend/native/mixer_dsp/: Cargo.toml  README.md
docs/: README.md  elixir-phoenix.md
docs/tech/: README.md  architecture.md  data-model.md  design-choices.md  dsp-engine.md  frontend.md  functionalities.md  rest-api.md  websocket-protocol.md
frontend/: AGENTS.md  package-lock.json  package.json  vite.config.ts
frontend/public/: audio-processor.js
frontend/src/: App.tsx
frontend/src/api/: rest.ts
frontend/src/components/: AdsrEnvelope.tsx  AudioVisualization.tsx  HelpLegend.tsx  Keyboard.tsx  MixerView.tsx  ProjectList.tsx  ProjectWorkspace.tsx  SpectrumCanvas.tsx  SynthControls.tsx
frontend/src/hooks/: useAudioWorklet.ts  useMetronome.ts
frontend/src/presets/: synthPresets.ts
frontend/src/store/: useCollabStore.ts  (+4 more)
(+37 files in other folders)
